--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ethersproject/shims": "^5.7.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-clipboard/clipboard": "^1.13.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/stack": "^6.3.20",
