--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avacadoWallet",
+  "name": "AvocadoWallet",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^6.3.20",
     "ethers": "^6.9.0",
     "react": "18.2.0",
-    "react-native": "0.73.0",
+    "react-native": "0.73.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-get-random-values": "^1.10.0",
     "react-native-safe-area-context": "^4.8.1",
